# AMD_cluster_soil

./: .gitignore  HIP porting guide.md  HIP_porting_guide.md  README.md
codes/hands-on-1/shoc-l0/: README.md
codes/hands-on-1/shoc-l0/shoc/: Makefile.in  configure  configure.ac  results.csv
codes/hands-on-1/shoc-l0/shoc/Logs/: buildFlags.txt  compilerVersion.txt  detect.txt  dev0_BFS.err  dev0_FFT.err  dev0_GEMM.err  dev0_MD.err  dev0_MD5Hash.err  dev0_NeuralNet.err  dev0_Reduction.err  dev0_S3D.err  dev0_Scan.err  dev0_Sort.err  dev0_Spmv.err  dev0_Stencil2D.err  dev0_Triad.err  deviceInfo.txt  version.txt
codes/hands-on-1/shoc-l0/shoc/config/: common.mk.in  conf-kleurplaat.sh
codes/hands-on-1/shoc-l0/shoc/doc/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/: Makefile.am  Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/common/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/cuda/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/cuda/level0/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/cuda/level0/epmpi/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/cuda/level1/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/cuda/level1/bfs/: Makefile.am  Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/cuda/level1/fft/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/cuda/level1/gemm/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/cuda/level1/md/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/cuda/level1/md5hash/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/cuda/level1/neuralnet/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/cuda/level1/reduction/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/cuda/level1/scan/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/cuda/level1/sort/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/cuda/level1/spmv/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/cuda/level1/stencil2d/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/cuda/level1/triad/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/cuda/level2/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/cuda/level2/qtclustering/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/cuda/level2/s3d/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/hip/: Makefile.am  Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/hip/common/: CUDAPMSMemMgr.h  PMSMemMgmt.h  cudacommon.h  main.cpp  support.h
codes/hands-on-1/shoc-l0/shoc/src/hip/level0/: BusSpeedDownload.cu  DeviceMemory.cu  Makefile.am  Makefile.in  MaxFlops.cu
codes/hands-on-1/shoc-l0/shoc/src/hip/level0/epmpi/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/hip/level1/: Makefile.am  Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/hip/level1/bfs/: BFS  BFS.cu  Makefile.am  Makefile.in  bfs_kernel.cu  bfs_kernel.h
codes/hands-on-1/shoc-l0/shoc/src/hip/level1/fft/: FFT  FFT.cpp  Makefile.am  Makefile.in  codelets.h  fftlib.cu
codes/hands-on-1/shoc-l0/shoc/src/hip/level1/gemm/: GEMM  GEMM.cpp  Makefile.am  Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/hip/level1/gemm/epmpi/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/hip/level1/md/: MD.cu  MD.h  Makefile.am  Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/hip/level1/md5hash/: MD5Hash.cu  Makefile.am  Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/hip/level1/md5hash/epmpi/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/hip/level1/neuralnet/: Makefile.am  Makefile.in  NeuralNet.cu
codes/hands-on-1/shoc-l0/shoc/src/hip/level1/neuralnet/epmpi/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/hip/level1/reduction/: Makefile.am  Makefile.in  Reduction  Reduction.cu  reduction_kernel.h  tpRedLaunchKernel.cu  tpReduction.cpp
codes/hands-on-1/shoc-l0/shoc/src/hip/level1/reduction/epmpi/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/hip/level1/reduction/tpmpi/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/hip/level1/scan/: Makefile.am  Makefile.in  Scan  Scan.cu  scan_kernel.h  tpScan.cpp  tpScanLaunchKernel.cu
codes/hands-on-1/shoc-l0/shoc/src/hip/level1/scan/epmpi/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/hip/level1/scan/tpmpi/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/hip/level1/stencil2d/: CUDAStencilKernel.cu  MPICUDAStencil.cpp  Makefile.am  Makefile.in  Stencil2Dmain.cpp
codes/hands-on-1/shoc-l0/shoc/src/hip/level1/stencil2d/tpmpi/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/hip/level1/triad/: Makefile.am  Makefile.in  Triad  Triad.cu
codes/hands-on-1/shoc-l0/shoc/src/hip/level1/triad/epmpi/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/hip/level2/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/hip/level2/qtclustering/: Makefile.am  Makefile.in  QTC  QTC.cu  kernels_common.h  kernels_compact_storage.h  kernels_full_storage.h
codes/hands-on-1/shoc-l0/shoc/src/hip/level2/qtclustering/tpmpi/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/mpi/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/mpi/common/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/mpi/contention/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/mpi/contention-mt/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/opencl/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/opencl/common/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/opencl/level0/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/opencl/level1/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/opencl/level2/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/stability/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/src/stability/epmpi/: Makefile.in
codes/hands-on-1/shoc-l0/shoc/tools/: .driver.pl.swp  Makefile.in  driver.pl
codes/hands-on-2/fft/fft/: simplefft-cuda.cpp  simplefft-hip.cpp
codes/hands-on-2/jacobi/: Makefile  README.md
codes/hands-on-2/jacobi/jacobi-cuda/: Makefile
codes/hands-on-2/jacobi/jacobi-hip/: CUDA_Aware_MPI.c  CUDA_Normal_MPI.c  Device.cu  Host.c  Jacobi.c  Jacobi.h
codes/hands-on-2/simpleCUBLAS/: compile.sh  simpleCUBLAS.cpp
porting-guide/: README.md  vec_add.cu
slides/: .gitignore
slides/Performance-analysis/: main.tex
slides/hip_porting/: HIP_porting_slides.tex  main.tex
slides/jacobi-demo/: README.md  main.tex
(+73 files in other folders)
